--- a/Studio.Foundation/Studio.Foundation/Views/Errors/404.cshtml
+++ b/Studio.Foundation/Studio.Foundation/Views/Errors/404.cshtml
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Welcome</title>
+    <title>{{ message }}</title>
 </head>
 <body>
-    <p>Welcome</p>
+    <p>{{ message }}</p>
 </body>
